# meson-windows-limited-api

./: example.c  meson.build  pyproject.toml  test_example.py
.github/workflows/: build.yml
