[project]
name = "example"
requires-python = ">=3.9"
version = "0.0.1"

[project.optional-dependencies]
test = ["pytest"]

[build-system]
build-backend = 'mesonpy'
requires = ["meson-python"]

[tool.meson-python]
limited-api = true

[tool.cibuildwheel]
build-verbosity = 1
skip = [
    # Only build 64-built wheels on Windows
    "*win32*",
    # Skip PyPy builds; PyPy doesn't support abi3 tags
    "pp*",
]
test-extras = ["test"]
test-command = ["pytest {project}/test_example.py"]
